--- a/style.css
+++ b/style.css
@@ -3,11 +3,11 @@ body {
 }
 
 main {
-  width: 80em;
-  margin: 0 auto;
+  overflow: hidden;
+  width: 80ch;
+  margin: 3em auto;
 }
 
 aside {
-  margin-top: 5em;
   background: silver;
 }
